0.04
 - Add test for missing Tags object.
 - Regen example plack_app_login.pl.
 - Update Module::Install to 1.21 version.

0.03 2023-04-23T20:53:28+02:00
 - Add example web app and screenshot.
 - Regen README file from doc.
 - Update copyright years.

0.02 2022-09-12T23:51:29+02:00
 - Fix minimal dependency of Tags::HTML.
 - Improve CSS for button.
 - Rename example to better name.

0.01 2022-07-07T22:34:28+02:00
 - First version.